--- a/src/public/graphview.html
+++ b/src/public/graphview.html
@@ -1,70 +1,77 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf8"></meta>
-<script src="./echarts.js"></script>
-<script src="./jquery-1.10.2.min.js"></script>
-<script src="./axios.js"></script>
-<script type="text/javascript">
-    function draw(){
-        //var text = $("#graph-input").val();
-        //var data = eval(text);
+    <meta charset="utf8">
+    </meta>
+    <script src="./echarts.js"></script>
+    <script src="./jquery-1.10.2.min.js"></script>
+    <script src="./axios.js"></script>
+    <script type="text/javascript">
+        function draw() {
+            //var text = $("#graph-input").val();
+            //var data = eval(text);
 
-        axios.get('http:localhost:10095/get/data', {
-            params: {
-                ID: 12345
-            }
-        }).then(function(response) {
+            axios.get('http:localhost:9081/get/data', {
+                params: {
+                    ID: 12345
+                }
+            }).then(function (response) {
 
-            console.log(response.data);
+                console.log(response.data);
 
-            let edges = response.data.PipeNetWorks.SS_NETWORK.Edges;
+                let edges = response.data.PipeNetWorks.SS_NETWORK.Edges;
 
-            let data = [];
-            for (let i = 0; i < edges.length; ++i)
-            {
-                let s = edges[i].SMFNode;
-                let e = edges[i].SMTNode;
-                let id = edges[i].SMID;
-                data.push([s, e, id]);
-            }
+                let data = [];
+                for (let i = 0; i < edges.length; ++i) {
+                    let s = edges[i].SMFNode;
+                    let e = edges[i].SMTNode;
+                    let id = edges[i].SMID;
+                    data.push([s, e, id]);
+                }
 
-            var graph = data2Graph(data);
+                var graph = data2Graph(data);
 
-            drawGraph(graph);
+                drawGraph(graph);
 
-        }).catch(function(error) {
+            }).catch(function (error) {
 
-        });
-    }
-
-    function data2Graph(data) {
-        var graph = {}
-        var vertices = {}
-        var links = [];
-        for (var i = 0; i < data.length; i++) {
-            var s = String(data[i][0]);
-            var t = String(data[i][1]);
-            var v = data[i][2];
-            vertices[s] = s;
-            vertices[t] = t;
-            links.push({'source' : s, 'target' : t, 'value' : v});
+            });
         }
-        var nodes = [];
-        $.each(vertices, function(k, v) {
-            nodes.push({'name' : v, 'value' : v});
-        });
-        graph['links'] = links;
-        graph['data'] = nodes;
-        return graph;
-    }
 
-    function drawGraph(graph) {
-        var myChart = echarts.init(document.getElementById("echarts-main"));
-        var option = {
-            tooltip: {},
-            series : [
-                {
+        function data2Graph(data) {
+            var graph = {}
+            var vertices = {}
+            var links = [];
+            for (var i = 0; i < data.length; i++) {
+                var s = String(data[i][0]);
+                var t = String(data[i][1]);
+                var v = data[i][2];
+                vertices[s] = s;
+                vertices[t] = t;
+                links.push({
+                    'source': s,
+                    'target': t,
+                    'value': v
+                });
+            }
+            var nodes = [];
+            $.each(vertices, function (k, v) {
+                nodes.push({
+                    'name': v,
+                    'value': v
+                });
+            });
+            graph['links'] = links;
+            graph['data'] = nodes;
+            return graph;
+        }
+
+        function drawGraph(graph) {
+            var myChart = echarts.init(document.getElementById("echarts-main"));
+            var option = {
+                tooltip: {},
+                series: [{
                     type: 'graph',
                     layout: 'force',
                     symbolSize: 30,
@@ -90,26 +97,27 @@
                         repulsion: 1000,
                         edgeLength: 200
                     }
-                }
-            ]
-        };
-        myChart.setOption(option);
-    }
+                }]
+            };
+            myChart.setOption(option);
+        }
 
-    $(document).ready(function(){
-        draw();
-        $("#gen-btn").on("click", function(){
+        $(document).ready(function () {
             draw();
+            $("#gen-btn").on("click", function () {
+                draw();
+            });
         });
-    });
-</script>
+    </script>
 </head>
+
 <body>
-<p>在下方文本框内输入有向图JSON（[source, target, value]）：</p>
-<textarea id="graph-input" style="height:10px;width:500px">
+    <p>在下方文本框内输入有向图JSON（[source, target, value]）：</p>
+    <textarea id="graph-input" style="height:10px;width:500px">
     [[0, 1, 0], [1, 2, 0]]
 </textarea>
-<p><button id="gen-btn">生成力导向图</button></p>
-<div id="echarts-main" style="height:800px;width:100%;border:1px dashed;"></div>
+    <p><button id="gen-btn">生成力导向图</button></p>
+    <div id="echarts-main" style="height:800px;width:100%;border:1px dashed;"></div>
 </body>
+
 </html>
